create recycler view to show list of popular movies
Signed-off-by: ahmad sayuti <ahmad.sayuti@delameta.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="artists">Artists</string>
     <string name="tv_shows">Tv Shows</string>
     <string name="movies">Movies</string>
+    <string name="textview">TextView</string>
+    <string name="movie_image">Movie Image</string>
 </resources>
