--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="movies">Movies</string>
     <string name="textview">TextView</string>
     <string name="movie_image">Movie Image</string>
+    <string name="update">Update</string>
 </resources>
